<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Question 1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_weight="0"
            android:background="@android:color/darker_gray"
            android:orientation="vertical">

            <TextView
                android:id="@+id/q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <RadioGroup
                android:id="@+id/a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/a1a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a1a" />

                <RadioButton
                    android:id="@+id/a1b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a1b" />

                <RadioButton
                    android:id="@+id/a1c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a1c" />

                <RadioButton
                    android:id="@+id/a1d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a1d" />
            </RadioGroup>
        </LinearLayout>

        <!--Question 2-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_weight="0"
            android:background="@android:color/darker_gray"
            android:orientation="vertical">

            <TextView
                android:id="@+id/q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:textColor="@android:color/black"
                android:textSize="22sp" />


                    <CheckBox
                        android:id="@+id/a2a"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/a2a"
                        android:layout_weight="1"/>

                    <CheckBox
                        android:id="@+id/a2b"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/a2b"
                        android:layout_weight="1"/>


                    <CheckBox
                        android:id="@+id/a2c"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/a2c"
                        android:layout_weight="1"/>

                    <CheckBox
                        android:id="@+id/a2d"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/a2d"
                        android:layout_weight="1"/>


        </LinearLayout>

        <!--Question 3-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_weight="0"
            android:background="@android:color/darker_gray"
            android:orientation="vertical">

            <TextView
                android:id="@+id/q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3"
                android:textColor="@android:color/black"
                android:textSize="22sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/a3hint"/>

        </LinearLayout>

        <!--submit button-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/submit"
                android:text="@string/submit_btn"
                android:layout_centerInParent="true"
                android:layout_margin="12dp"/>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>
